# factorioprints_monitor

./: .gitignore  README.md  manage.py  pyproject.toml  run_celery.bat  run_server.bat
.run/: 8129.run.xml
factorioprints_monitor/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
monitoring/: admin.py  blueprints_scraper.py  comments_scraper.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
monitoring/management/commands/: blueprints_with_new_comments.py  delete_snapshot.py  latest_blueprints.py  list_snapshots.py  take_snapshot.py
monitoring/migrations/: 0001_initial.py  0002_alter_blueprintsnapshot_favourites_and_more.py
monitoring/templates/monitoring/: base.html  comments_between.html  home.html  user_dashboard.html  user_snapshots.html
