[project]
name = "factorioprints_monitor"
version = "0.1.0"
description = "Monitor factorioprints for new comments."
authors = [
    { name = "Nir Adar" }
]
requires-python = ">=3.13"

dependencies = [
    "playwright>=1.52.0",
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.0",
    "django>=5.2.2",
    "django-extensions>=4.1"
    ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock",
]

[tool.setuptools.packages.find]
include = ["monitoring*"]